--- a/src/app/views/app-layout/app-footer/app-footer.component.html
+++ b/src/app/views/app-layout/app-footer/app-footer.component.html
@@ -1,3 +1,6 @@
 <footer>
-  <a [href]="url" target="_blank">Webpack Angular 2 Starter</a>
+    Built with
+  <a [href]="ngt" target="_blank">Angular CLI Tools</a>
+    using
+  <a [href]="url" target="_blank">Webpack Angular 2 Bootstrap seed</a>
 </footer>
